<resources>
    <string name="app_name">Ghala</string>
    <string name="no_orders_created">No Orders Available</string>
    <string name="no_inventory_created">No Inventory Available</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="txt_prev_category">Previous category: %s</string>
    <string name="next">Next</string>
    <string name="_722945678">722945678</string>
    <string name="kenya_254">KENYA(+254)</string>
    <string name="we_need_to_send_an_otp_to_authenticate_your_number">We need to send an OTP to authenticate your number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="resend"><u>Resend</u></string>
    <string name="please_enter_otp_code_sent_to_your_number">Please enter OTP code sent to your number</string>
    <string name="otp_sms">OTP SMS</string>
    <string name="verify">Verify</string>
    <string name="did_not_receive_an_otp">Did not receive an OTP ?</string>
    <string name="setup_account">Setup Account</string>
    <string name="to_start_using_the_app">to start using the app.</string>
    <string name="welcome_to_ghala_app_please_setup_your_account">Welcome to Ghala app. Please setup your account</string>
    <string name="email_address">Email Address</string>
    <string name="second_name">Second Name</string>
    <string name="first_name">First Name</string>
    <string name="phone">phone</string>
    <string name="otp_input">OTP Input</string>
    <string-array name="warehouses">
        <item>Select a warehouse</item>
        <item>Kawangware</item>
        <item>Baba dogo</item>
        <item>Ruiru</item>
    </string-array>
    <string-array name="category_items">
        <item>Select A Category</item>
        <item>Dry Cereals</item>
        <item>Flour</item>
        <item>Cooking Oil</item>
        <item>Sugar</item>
        <item>Soap &amp; Detergent </item>
    </string-array>
    <string-array name="new_category_items">
        <item>Select A Category</item>
        <item>Dry Cereals</item>
        <item>Flour</item>
        <item>Cooking Oil</item>
        <item>Sugar</item>
        <item>Soap &amp; Detergent </item>
    </string-array>
    <string-array name="department">
        <item>Select a department </item>
        <item>Dispatch</item>
        <item>Logistics</item>
    </string-array>
    <string-array name="role">
        <item>Select a role </item>
        <item>Dispatcher Associate</item>
        <item>Admin</item>
        <item>Driver</item>
    </string-array>
    <string-array name="status">
        <item>All</item>
        <item>Submitted</item>
        <item>Pending</item>
        <item>Processed</item>
    </string-array>
    <string-array name="category">
        <item>All</item>
        <item>Available</item>
        <item>Out Of Stock</item>
    </string-array>
    <string name="nav_header_title">username</string>
    <string name="nav_header_subtitle">user@ghala.app</string>
    <string name="menu_home">Home</string>
    <string name="menu_warehouse">Warehouses</string>
    <string name="menu_settings">Settings</string>
    <string name="orders">Orders</string>
    <string name="inventory">Inventory</string>
    <string name="dispatch">Dispatch</string>
    <string name="statistics">Statistics</string>
    <string name="hello">Hello,</string>
    <string name="ruiru_wh">Ruiru WH</string>
    <string name="your_registration_has_been_submitted_successfully">Your Registration has been submitted Successfully</string>
    <string name="dispatch_associate">Dispatch Associate</string>
    <string name="role">Role :</string>
    <string name="warehouse">Warehouse :</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="account_holder_email_address">Email :</string>
    <string name="malcom_maima">name</string>
    <string name="account_first_name">First Name :</string>
    <string name="account_secons_name">Second Name :</string>
    <string name="successfully">Successfully</string>
    <string name="confirm">Confirm</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_inventory">Inventory</string>
    <string name="menu_dispatch">Dispatch</string>
    <string name="all_products_including_taxes">All products including Taxes</string>
    <string name="_2022_statistics">2022 Sales</string>
    <string name="warehouseStatsTitle">Warehouse Statistics</string>
    <string name="warehouse_tasks">Warehouse tasks</string>
    <string name="status_all">Status:</string>
    <string name="category">Category: </string>
    <string name="txt_category">Category: %s</string>
    <string name="txt_orderId">ORDER ID: %s</string>
    <string name="txt_delivery_date">Delivery Date: %s</string>
    <string name="dispatch_code">Dispatch Code: %s</string>
    <string name="route">Route: %s</string>
    <string name="delivery_window">Delivery Window: %s</string>
    <string name="order"> %s orders</string>
    <string name="sku">SKU: %s</string>
    <string name="price">Price: %s</string>
    <string name="items"> %s items</string>
    <string name="filter">filter</string>
    <string name="uliza_shop">Uliza shop</string>
    <string name="price_600_000">Price: 600,000</string>
    <string name="delivery_date_feb_19_2022">Delivery Date: Feb 19, 2022</string>
    <string name="pending">Pending</string>
    <string name="order_id_gj301">Order Id : GJ301</string>
    <string name="_12">12</string>
    <string name="editicon">editIcon</string>
    <string name="editIcon">edit icon</string>
    <string name="add_new_warehouse">Add New Warehouse</string>
    <string name="close">Close</string>
    <string name="warehouse_name">Warehouse Name</string>
    <string name="warehouse_address">Warehouse Location</string>
    <string name="add">Add</string>
    <string name="error_warehouse_title">Please enter warehouse name</string>
    <string name="error_warehouse_address">Please enter warehouse location</string>
    <string name="add_new_inventory">Add New Inventory</string>
    <string name="filter_icon">filter_icon</string>
    <string name="product_price">Price</string>
    <string name="add_new_inventory_item">Add New Inventory Item</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="edit">EDIT</string>
    <string name="edit_inventory_item">Edit Inventory Item</string>
    <string name="create_delivery_note">Create Delivery Note</string>
    <string name="enter_pin">Enter pin</string>
    <string name="confirm_pin">Confirm pin</string>
    <string name="enter_your_pin">ENTER YOUR PIN</string>
    <string name="please_enter_your_pin">Please Enter Your Pin</string>
    <string name="login">LOGIN</string>
    <string name="error_warehouse_name">Please enter warehouse name</string>
    <string name="error_warehouse_location">Please enter warehouse location</string>
    <string name="save">Save</string>
    <string name="edit_warehouse">Edit Warehouse</string>
    <string name="update">Update</string>
    <string name="dispatch_status">Dispatch</string>
    <string name="no_users_available">No Users Available</string>
    <string name="space">\u0020</string>
    <string name="logout">LOGOUT</string>
    <string name="warehouseStatsDesc">Inventory vs Orders statistics</string>
    <string name="no_delivery_notes_available">No Delivery Notes Available</string>
    <string name="access_denied">Access denied</string>
    <string name="please_contact_an_admin">Please contact an admin</string>
    <string name="to_upgrade_your_role">To upgrade your role</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_users">Users</string>
</resources>