<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_warehouses"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/menu_warehouse" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_box_black"
            android:title="@string/menu_orders" />

        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/menu_inventory" />

        <item
            android:id="@+id/nav_dispatch"
            android:icon="@drawable/ic_clock_black_24dp"
            android:title="@string/menu_dispatch" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/menu_settings" />
    </group>
</menu>