<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.inventory.InventoryFragment">

    <LinearLayout
        android:id="@+id/ll_orders"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <ImageButton
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:clickable="false"
            android:background="@drawable/outline_filter_alt_black_24"
            android:contentDescription="@string/filter_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="@font/open_sans"
            android:layout_gravity="center"
            android:text="@string/filter"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans"
            android:gravity="center|end"
            android:text="@string/category"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_category_status"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:entries="@array/category"/>

    </LinearLayout>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewInventory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_orders"
            tools:listitem="@layout/list_item_inventory" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvEmptyInventoryItems"
        android:text="@string/no_inventory_created"
        android:layout_gravity="center"
        android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addNewInventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:contentDescription="@string/add_new_inventory"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        android:layout_margin="16dp"
        android:tint="@color/white"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@drawable/ic_add_white_36dp"
        />

</FrameLayout>